# beancount_reports

./: .gitignore  README.md  pyproject.toml  run-income-expense-report.sh  shell.nix
src/: compute_income_vs_expenses.py  income_expense_config.proto  income_expense_config_pb2.py  monthly_expenses.py  networth_report.py
